--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <a href="index.html">
             <h1>Dancing Together</h1>
         </a>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">home</a>
+                </li>
+                <li>
+                    <a href="#">gallery</a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
+            </ul> 
+        </nav>
     </header>
     <main>
         <section>mian-image
