--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="index.html" id="logo">
             <h1>Dancing Together</h1>
         </a>
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">home</a>
+                    <a href="index.html" class="active">home</a>
                 </li>
                 <li>
                     <a href="#">gallery</a>
