--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
         </nav>
     </header>
     <main>
-        <section>mian-image
-            <div></div>
-            <div></div>
+        <section id="main-outer">
+            <div id="main-image"></div>
+            <div id="main-text">
+                <h2>Dancing is a passion ... </h2>
+                <h2>Which we pass on to our kids</h2>
+            </div>
         </section>
         <section>
             <h2>about-us</h2>
