add html and style for bout-us section

--- a/index.html
+++ b/index.html
@@ -38,19 +38,25 @@
                 <h2>Which we pass on to our kids</h2>
             </div>
         </section>
-        <section>
+        <section id="about-us">
             <h2>about-us</h2>
-            <div>
-                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</div>
-                <div>about-1 image</div>
+            <div class="about">
+                <div class="about-text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
+                </div>
+                <div class="about-image" id="about-image1"></div>
             </div>
-            <div>
-                <div>about-2 image</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi itaque nam voluptatibus tempora, atque explicabo animi rerum doloribus officiis, optio placeat consequuntur, aperiam laborum illo unde quisquam ex voluptate asperiores.</div>
+            <div class="about">
+                <div class="about-image" id="about-image2"></div>
+                <div class="about-text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
+                </div>
             </div>
-            <div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto eum at voluptate, sint aliquid quasi debitis? Adipisci alias veniam velit distinctio qui voluptate at, modi nisi pariatur eum. Autem?</div>
-                <div>about-3 image</div>
+            <div class="about">
+                <div class="about-text">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
+                </div>
+                <div class="about-image" id="about-image3"></div>
             </div>
         </section>
         <section>
