--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="about-image" id="about-image3"></div>
             </div>
         </section>
-        <section>
+        <section id="our-classes">
             <h2>our classes</h2>
             <div>
                 <table></table>
