Fix the main text

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <section id="main-outer">
             <div id="main-image"></div>
             <div id="main-text">
-                <h2>Dancing is a passion ... </h2>
-                <h2>Which we pass on to our kids</h2>
+                <h2>Dancing is passion ... </h2>
+                <h2>we pass on to our kids</h2>
             </div>
         </section>
         <section id="about-us">
