add table in home page our classes section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Dancing Together</title>
 </head>
 <body>
+
     <header>
         <a href="index.html" id="logo">
             <h1>Dancing Together</h1>
@@ -30,6 +31,7 @@
             </ul> 
         </nav>
     </header>
+
     <main>
         <section id="main-outer">
             <div id="main-image"></div>
@@ -62,10 +64,60 @@
         <section id="our-classes">
             <h2>our classes</h2>
             <div>
-                <table></table>
+                <table>
+                    <tr>
+                        <th>class</th>
+                        <th>day</th>
+                        <th>time</th>
+                        <th>register</th>
+                    </tr>
+                    <tr class="light">
+                        <td>Classical Ballet</td>
+                        <td>Monday</td>
+                        <td>18:00-19:30</td>
+                        <td><a href="#" target="_blank">register</a></td>
+                    </tr>
+                    <tr class="dark">
+                        <td>Contemporary Ballet</td>
+                        <td>Tuesday</td>
+                        <td>17:00-18:30</td>
+                        <td><a href="#" target="_blank">register</a></td>
+                    </tr>
+                    <tr class="light">
+                        <td>Classical Ballet</td>
+                        <td>Wednesday</td>
+                        <td>18:00-19:30</td>
+                        <td><a href="#" target="_blank">register</a></td>
+                    </tr>
+                    <tr class="dark">
+                        <td>Contemporary Ballet</td>
+                        <td>Thursday</td>
+                        <td>17:00-18:30</td>
+                        <td><a href="#" target="_blank">register</a></td>
+                    </tr>
+                    <tr class="light">
+                        <td>Classical Ballet</td>
+                        <td>Friday</td>
+                        <td>18:00-19:30</td>
+                        <td><a href="#" target="_blank">register</a></td>
+                    </tr>
+                    <tr class="dark">
+                        <td>Contemporary Ballet</td>
+                        <td>Saturday</td>
+                        <td>17:00-18:30</td>
+                        <td><a href="#" target="_blank">register</a></td>
+                    </tr>
+                    <tr>
+                        <td>-</td>
+                        <td>Sunday</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                </table>
             </div>
         </section>
     </main>
+
     <footer></footer> 
 </body>
 </html>
