--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <section id="about-us">
             <h2>about-us</h2>
             <div class="about">
-                <div class="about-text">
+                <div class="about-text" id="about-text1">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
                 </div>
                 <div class="about-image" id="about-image1"></div>
             </div>
             <div class="about">
                 <div class="about-image" id="about-image2"></div>
-                <div class="about-text">
+                <div class="about-text" id="about-text2">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
                 </div>
             </div>
             <div class="about">
-                <div class="about-text">
+                <div class="about-text" id="about-text3">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
                 </div>
                 <div class="about-image" id="about-image3"></div>
