Add footer structure html

--- a/index.html
+++ b/index.html
@@ -118,6 +118,23 @@
         </section>
     </main>
 
-    <footer></footer> 
+    <footer>
+        <div>
+            <h3>mobile:+31640210027</h3>
+            <h3>email:Dancing-Together@gmail.nl</h3>
+           <a href=""><h3>address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
+        </div>
+
+        <div>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (Opens in a now tab)"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (Opens in a now tab)"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (Opens in a now tab)"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (Opens in a now tab)"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+
+    </footer>
+    
+     <!-- font awesome script -->
+     <script src="https://kit.fontawesome.com/769dd044b3.js" crossorigin="anonymous"></script>
 </body>
 </html>
