Add address href

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="footer-left">
             <h3>mobile:+31640210027</h3>
             <h3>email:Dancing-Together@gmail.nl</h3>
-           <a href=""><h3>address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
+           <a href="https://www.google.nl/maps/place/Palmstraat+44,+1015+HS+Amsterdam/@52.3817121,4.8817415,17z/data=!3m1!4b1!4m5!3m4!1s0x47c609ce20741631:0x68d39af84c2f1a34!8m2!3d52.3817088!4d4.8839302"><h3>address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
         </div>
 
         <div class="footer-right">
