--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <header>
         <a href="index.html" id="logo">
+            <img src="assets/images/logo.png" alt="">
             <h1>Dancing Together</h1>
         </a>
         <nav>
