Add text and style for ahout,fix feedback

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html" class="active">home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">gallery</a>
+                    <a href="#">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">contact</a>
+                    <a href="#">Contact</a>
                 </li>
             </ul> 
         </nav>
@@ -45,19 +45,21 @@
             <h2>about-us</h2>
             <div class="about">
                 <div class="about-text" id="about-text1">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
+                    <p>The Ballet is a wonderful way for young children to gain strength, improve flexibility and stay fit and have fun. It teaches them to focus and cooperate with others.</p>
                 </div>
                 <div class="about-image" id="about-image1"></div>
             </div>
             <div class="about">
                 <div class="about-image" id="about-image2"></div>
                 <div class="about-text" id="about-text2">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
+                    <p>Hayley Descavich began her training at Stoneleigh Burnham School in Greenfield, Massachusetts. She graduated from the Hartt School at the University of Hartford, with a Bachelor of Fine Arts, Dance Pedagogy in 2012.</p>
+                    <p>Kelly Hayes has been teaching Ballet and holds a BFA in Dance from the University of Iowa. Kelly enjoys sharing ballet technique with her students in a healthy, joyful way. Her classes are structured.</p>
                 </div>
             </div>
             <div class="about">
                 <div class="about-text" id="about-text3">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugiat tempora harum doloribus eum hic ex rem, iure cumque quibusdam ipsam nostrum explicabo eveniet tempore voluptates, aperiam maiores laboriosam adipisci.</p>
+                    <p>Classical ballet is the traditional, formal styles of ballet that exclusively employ classical ballet technique. It is known for its aesthetics and rigorous technique and precise movements.</p>
+                    <p>Contemporary ballet is a genre of dance that incorporates elements of classical ballet and modern dance. Many of its attributes come from the ideas and innovations of 20th-century modern dance.</p>
                 </div>
                 <div class="about-image" id="about-image3"></div>
             </div>
@@ -121,8 +123,8 @@
 
     <footer>
         <div class="footer-left">
-            <h3>mobile:+31640210027</h3>
-            <h3>email:Dancing-Together@gmail.nl</h3>
+            <h3>Mobile:+31640210027</h3>
+            <h3>Email:Dancing-Together@gmail.nl</h3>
            <a href="https://www.google.nl/maps/place/Palmstraat+44,+1015+HS+Amsterdam/@52.3817121,4.8817415,17z/data=!3m1!4b1!4m5!3m4!1s0x47c609ce20741631:0x68d39af84c2f1a34!8m2!3d52.3817088!4d4.8839302"><h3>address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
         </div>
 
