Add span to about-text and fix the table,style the span

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <div class="about">
                 <div class="about-image" id="about-image2"></div>
                 <div class="about-text" id="about-text2">
-                    <p>Hayley Descavich began her training at Stoneleigh Burnham School in Greenfield, Massachusetts. She graduated from the Hartt School at the University of Hartford, with a Bachelor of Fine Arts, Dance Pedagogy in 2012.</p>
-                    <p>Kelly Hayes has been teaching Ballet and holds a BFA in Dance from the University of Iowa. Kelly enjoys sharing ballet technique with her students in a healthy, joyful way. Her classes are structured.</p>
+                    <p><span>Hayley Descavich</span> began her training at Stoneleigh Burnham School in Greenfield, Massachusetts. She graduated from the Hartt School at the University of Hartford, with a Bachelor of Fine Arts, Dance Pedagogy in 2012.</p>
+                    <p><span>Kelly Hayes</span> has been teaching Ballet and holds a BFA in Dance from the University of Iowa. Kelly enjoys sharing ballet technique with her students in a healthy, joyful way. Her classes are structured.</p>
                 </div>
             </div>
             <div class="about">
                 <div class="about-text" id="about-text3">
-                    <p>Classical ballet is the traditional, formal styles of ballet that exclusively employ classical ballet technique. It is known for its aesthetics and rigorous technique and precise movements.</p>
-                    <p>Contemporary ballet is a genre of dance that incorporates elements of classical ballet and modern dance. Many of its attributes come from the ideas and innovations of 20th-century modern dance.</p>
+                    <p><span>Classical ballet</span> is the traditional, formal styles of ballet that exclusively employ classical ballet technique. It is known for its aesthetics and rigorous technique and precise movements.</p>
+                    <p><span>Contemporary ballet</span> is a genre of dance that incorporates elements of classical ballet and modern dance. Many of its attributes come from the ideas and innovations of 20th-century modern dance.</p>
                 </div>
                 <div class="about-image" id="about-image3"></div>
             </div>
@@ -72,43 +72,43 @@
                         <th>class</th>
                         <th>day</th>
                         <th>time</th>
-                        <th>register</th>
+                        <th>teacher</th>
                     </tr>
                     <tr class="light">
                         <td>Classical Ballet</td>
                         <td>Monday</td>
                         <td>18:00-19:30</td>
-                        <td><a href="#" target="_blank">register</a></td>
+                        <td><a href="#" target="_blank">Kelly Hayes</a></td>
                     </tr>
                     <tr class="dark">
                         <td>Contemporary Ballet</td>
                         <td>Tuesday</td>
                         <td>17:00-18:30</td>
-                        <td><a href="#" target="_blank">register</a></td>
+                        <td><a href="#" target="_blank">Hayley Descavich</a></td>
                     </tr>
                     <tr class="light">
                         <td>Classical Ballet</td>
                         <td>Wednesday</td>
                         <td>18:00-19:30</td>
-                        <td><a href="#" target="_blank">register</a></td>
+                        <td><a href="#" target="_blank">Kelly Hayes</a></td>
                     </tr>
                     <tr class="dark">
                         <td>Contemporary Ballet</td>
                         <td>Thursday</td>
                         <td>17:00-18:30</td>
-                        <td><a href="#" target="_blank">register</a></td>
+                        <td><a href="#" target="_blank">Hayley Descavich</a></td>
                     </tr>
                     <tr class="light">
                         <td>Classical Ballet</td>
                         <td>Friday</td>
                         <td>18:00-19:30</td>
-                        <td><a href="#" target="_blank">register</a></td>
+                        <td><a href="#" target="_blank">Kelly Hayes</a></td>
                     </tr>
                     <tr class="dark">
                         <td>Contemporary Ballet</td>
                         <td>Saturday</td>
                         <td>17:00-18:30</td>
-                        <td><a href="#" target="_blank">register</a></td>
+                        <td><a href="#" target="_blank">Hayley Descavich</a></td>
                     </tr>
                     <tr>
                         <td>-</td>
@@ -117,6 +117,7 @@
                         <td>-</td>
                     </tr>
                 </table>
+                <input class="register-button" type="submit" value="register">
             </div>
         </section>
     </main>
@@ -125,7 +126,7 @@
         <div class="footer-left">
             <h3>Mobile:+31640210027</h3>
             <h3>Email:Dancing-Together@gmail.nl</h3>
-           <a href="https://www.google.nl/maps/place/Palmstraat+44,+1015+HS+Amsterdam/@52.3817121,4.8817415,17z/data=!3m1!4b1!4m5!3m4!1s0x47c609ce20741631:0x68d39af84c2f1a34!8m2!3d52.3817088!4d4.8839302"><h3>address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
+           <a href="https://www.google.nl/maps/place/Palmstraat+44,+1015+HS+Amsterdam/@52.3817121,4.8817415,17z/data=!3m1!4b1!4m5!3m4!1s0x47c609ce20741631:0x68d39af84c2f1a34!8m2!3d52.3817088!4d4.8839302"><h3>Address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
         </div>
 
         <div class="footer-right">
