Add img and style to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -34,8 +34,18 @@
         </nav>
     </header>
 
-    <main>
-       
+    <main id="photos">
+        <img src="assets/images/gallery-1.jpg" alt="">
+        <img src="assets/images/gallery-2.jpeg" alt="">
+        <img src="assets/images/gallery-3.jpeg" alt="">
+        <img src="assets/images/gallery-4.jpeg" alt="">
+        <img src="assets/images/gallery-5.jpeg" alt="">
+        <img src="assets/images/gallery-6.jpeg" alt="">
+        <img src="assets/images/gallery-7.jpeg" alt="">
+        <img src="assets/images/gallery-8.jpeg" alt="">
+        <img src="assets/images/gallery-9.jpeg" alt="">
+        <img src="assets/images/gallery-10.jpeg" alt="">
+        <img src="assets/images/gallery-11.jpeg" alt="">
     </main>
 
     <footer>
