Fix gallery style

--- a/gallery.html
+++ b/gallery.html
@@ -43,12 +43,12 @@
         <img src="assets/images/gallery-6.jpeg" alt="">
         <img src="assets/images/gallery-7.jpeg" alt="">
         <img src="assets/images/gallery-8.jpeg" alt="">
-        <img src="assets/images/gallery-9.jpeg" alt="">
+        <!-- <img src="assets/images/gallery-9.jpeg" alt=""> -->
         <img src="assets/images/gallery-10.jpeg" alt="">
         <img src="assets/images/gallery-11.jpeg" alt="">
     </main>
 
-    <footer>
+    <footer id="gallery-footer">
         <div class="footer-left">
             <h3>Mobile:+31640210027</h3>
             <h3>Email:Dancing-Together@gmail.nl</h3>
