--- a/index.html
+++ b/index.html
@@ -69,46 +69,46 @@
             <div>
                 <table>
                     <tr>
-                        <th>class</th>
-                        <th>day</th>
-                        <th>time</th>
-                        <th>teacher</th>
+                        <th>Class</th>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Teacher</th>
                     </tr>
                     <tr class="light">
                         <td>Classical Ballet</td>
                         <td>Monday</td>
                         <td>18:00-19:30</td>
-                        <td><a href="#" target="_blank">Kelly Hayes</a></td>
+                        <td>Kelly Hayes</td>
                     </tr>
                     <tr class="dark">
                         <td>Contemporary Ballet</td>
                         <td>Tuesday</td>
                         <td>17:00-18:30</td>
-                        <td><a href="#" target="_blank">Hayley Descavich</a></td>
+                        <td>Hayley Descavich</td>
                     </tr>
                     <tr class="light">
                         <td>Classical Ballet</td>
                         <td>Wednesday</td>
                         <td>18:00-19:30</td>
-                        <td><a href="#" target="_blank">Kelly Hayes</a></td>
+                        <td>Kelly Hayes</td>
                     </tr>
                     <tr class="dark">
                         <td>Contemporary Ballet</td>
                         <td>Thursday</td>
                         <td>17:00-18:30</td>
-                        <td><a href="#" target="_blank">Hayley Descavich</a></td>
+                        <td>Hayley Descavich</td>
                     </tr>
                     <tr class="light">
                         <td>Classical Ballet</td>
                         <td>Friday</td>
                         <td>18:00-19:30</td>
-                        <td><a href="#" target="_blank">Kelly Hayes</a></td>
+                        <td>Kelly Hayes</td>
                     </tr>
                     <tr class="dark">
                         <td>Contemporary Ballet</td>
                         <td>Saturday</td>
                         <td>17:00-18:30</td>
-                        <td><a href="#" target="_blank">Hayley Descavich</a></td>
+                        <td>Hayley Descavich</td>
                     </tr>
                     <tr>
                         <td>-</td>
