Add style for contact page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,6 @@
         </nav>
     </header>
 
-    <main>
         <section class="form-section">
             <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
                 <h2>Let's get you star dance! <img src="assets/images/logo.png" alt=""></h2>
@@ -51,16 +50,15 @@
                 <input type="radio" id="classical-ballet" name="ballet type" value="classical ballet">
                 <label for="contemporary-ballet">Contemporary ballet</label>
                 <input type="radio" id="contemporary-ballet" name="ballet type" value="contemporary ballet">
+                <hr>
                 <label for="question-feedback">We are happy to hear your question or feedback</label>
-                <textarea id="question-feedback" name="question or feedback" placeholder="Your feedback or question" cols="80" rows="5"></textarea>
+                <textarea id="question-feedback" name="question or feedback" placeholder="Your feedback or question" cols="400px" rows="5"></textarea>
             
                 <input class="register-button" type="submit" value="submit">
             </form>
         </section>
        
-    </main>
-
-    <footer>
+    <footer id="footer-contact">
         <div class="footer-left">
             <h3>Mobile:+31640210027</h3>
             <h3>Email:Dancing-Together@gmail.nl</h3>
