--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <td>-</td>
                     </tr>
                 </table>
-                <input class="register-button" type="submit" value="register">
+                <button class="register-button"><a href="contact.html">register</a></button>
             </div>
         </section>
     </main>
