Fix bug in submit button

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 <label for="question-feedback">We are happy to hear your question or feedback</label>
                 <textarea id="question-feedback" name="question or feedback" placeholder="Your feedback or question" cols="400px" rows="5"></textarea>
             
-                <input class="register-button" type="submit" value="submit">
+                <input class="register-button" type="submit" value="submit"  target="_blank">
             </form>
         </section>
        
