Add readme for main-outer section and fix the text

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <section id="main-outer">
             <div id="main-image"></div>
             <div id="main-text">
-                <h2>Dancing is passion ... </h2>
-                <h2>we pass on to our kids</h2>
+                <h2>Dancing together</h2>
+                <h2>join our school for kids between 8-16</h2>
             </div>
         </section>
         <section id="about-us">
