Fix about-text and style

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <h2>about-us</h2>
             <div class="about">
                 <div class="about-text" id="about-text1">
-                    <p>The Ballet is a wonderful way for young children to gain strength, improve flexibility and stay fit and have fun. It teaches them to focus and cooperate with others.</p>
+                    <p><span>Dancing together</span> sees dancing as a passion we pass to our kids,our school offers fun activities for kids to learn how to dance from a young age </p>
+                    <p><span>The Ballet</span> is a wonderful way for young children to improve flexibility, gain strength, stay fit and have fun. It teaches them to focus and cooperate with others.</p>
                 </div>
                 <div class="about-image" id="about-image1"></div>
             </div>
@@ -53,7 +54,7 @@
                 <div class="about-image" id="about-image2"></div>
                 <div class="about-text" id="about-text2">
                     <p><span>Hayley Descavich</span> began her training at Stoneleigh Burnham School in Greenfield, Massachusetts. She graduated from the Hartt School at the University of Hartford, with a Bachelor of Fine Arts, Dance Pedagogy in 2012.</p>
-                    <p><span>Kelly Hayes</span> has been teaching Ballet and holds a BFA in Dance from the University of Iowa. Kelly enjoys sharing ballet technique with her students in a healthy, joyful way. Her classes are structured.</p>
+                    <p><span>Kelly Hayes</span> has been teaching Ballet and holds a BFA in Dance from the University of Iowa. she like structured classes and Kelly enjoys sharing ballet technique with her students in a healthy, joyful way.</p>
                 </div>
             </div>
             <div class="about">
