--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     </header>
 
         <section class="form-section">
-            <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form">
+            <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form" target="_blank">
                 <h2>Let's get you star dance! <img src="assets/images/logo.png" alt=""></h2>
                 <label for="fname">First Name*</label>
                 <input id="fname" name="first_name" type="text" class="text-input" required>
@@ -54,7 +54,7 @@
                 <label for="question-feedback">We are happy to hear your question or feedback</label>
                 <textarea id="question-feedback" name="question or feedback" placeholder="Your feedback or question" cols="400px" rows="5"></textarea>
             
-                <input class="register-button" type="submit" value="submit"  target="_blank">
+                <input class="register-button" type="submit" value="submit">
             </form>
         </section>
        
