--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
         <section class="form-section">
             <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form" target="_blank">
-                <h2>Let's get you star dance! <img src="assets/images/logo.png" alt=""></h2>
+                <h2>Let's start dancing!<img src="assets/images/logo.png" alt=""></h2>
                 <label for="fname">First Name*</label>
                 <input id="fname" name="first_name" type="text" class="text-input" required>
                 
