fix bugs in home bage in the tabel

--- a/index.html
+++ b/index.html
@@ -111,14 +111,8 @@
                         <td>17:00-18:30</td>
                         <td>Hayley Descavich</td>
                     </tr>
-                    <tr>
-                        <td>-</td>
-                        <td>Sunday</td>
-                        <td>-</td>
-                        <td>-</td>
-                    </tr>
                 </table>
-                <button class="register-button"><a href="contact.html">register</a></button>
+                <a class="register-button" href="contact.html">register</a>
             </div>
         </section>
     </main>
