Add register text with style

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
                         <td>Hayley Descavich</td>
                     </tr>
                 </table>
-                <a class="register-button" href="contact.html">register</a>
+                <div class="Join-classes">
+                    <h3>Join our classes!</h3>
+                    <a class="register-button" href="contact.html">register</a>
+                </div>
             </div>
         </section>
     </main>
