--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="about">
                 <div class="about-image" id="about-image2"></div>
                 <div class="about-text" id="about-text2">
-                    <p><span>Hayley Descavich</span> began her training at Stoneleigh Burnham School in Greenfield, Massachusetts. She graduated from the Hartt School at the University of Hartford, with a Bachelor of Fine Arts, Dance Pedagogy in 2012.</p>
+                    <p><span>Hayley Descavich</span> began her training at Stoneleigh Burnham School in Greenfield, Massachusetts. She graduated from the art School at the University of Hartford, with a Bachelor of Fine Arts, Dance Pedagogy in 2012.</p>
                     <p><span>Kelly Hayes</span> has been teaching Ballet and holds a BFA in Dance from the University of Iowa. she like structured classes and Kelly enjoys sharing ballet technique with her students in a healthy, joyful way.</p>
                 </div>
             </div>
