--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     </header>
 
         <section class="form-section">
-            <form method="POST" action="https://formdump.codeinstitute.net/" class="contact-form" target="_blank">
+            <form method="get" action="./thankYou.html" class="contact-form" target="_blank">
                 <h2>Let's start dancing!<img src="assets/images/logo.png" alt=""></h2>
                 <label for="fname">First Name*</label>
                 <input id="fname" name="first_name" type="text" class="text-input" required>
