--- a/thankYou.html
+++ b/thankYou.html
@@ -12,6 +12,49 @@
     <title>Dancing Together</title>
 </head>
 <body>
-    <h1>Thank you for registering with us! We will contact you soon</h1>
+
+    <header>
+        <a href="index.html" id="logo">
+            <img src="assets/images/logo.png" alt="">
+            <h1>Dancing Together</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul> 
+        </nav>
+    </header>
+
+    <section class="thank-you">
+        <h1>Thank you for registering with us! We will contact you soon</h1>
+    </section>
+        
+
+    <footer class="thank-footer">
+        <div class="footer-left">
+            <h3>Mobile:+31640210027</h3>
+            <h3>Email:Dancing-Together@gmail.nl</h3>
+           <a href="https://www.google.nl/maps/place/Palmstraat+44,+1015+HS+Amsterdam/@52.3817121,4.8817415,17z/data=!3m1!4b1!4m5!3m4!1s0x47c609ce20741631:0x68d39af84c2f1a34!8m2!3d52.3817088!4d4.8839302" target="_blank"><h3>Address: Palmstraat 44, 1015HS Amsterdam Netherlands</h3></a>
+        </div>
+
+        <div class="footer-right">
+            <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (Opens in a now tab)"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (Opens in a now tab)"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (Opens in a now tab)"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (Opens in a now tab)"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+
+    </footer>
+    
+     <!-- font awesome script -->
+     <script src="https://kit.fontawesome.com/769dd044b3.js" crossorigin="anonymous"></script>
 </body>
 </html>
