--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <input type="radio" id="contemporary-ballet" name="ballet type" value="contemporary ballet">
                 <hr>
                 <label for="question-feedback">We are happy to hear your question or feedback</label>
-                <textarea id="question-feedback" name="question or feedback" placeholder="Your feedback or question" cols="400px" rows="5"></textarea>
+                <textarea id="question-feedback" name="question or feedback" placeholder="Your feedback or question" cols="4" rows="5"></textarea>
             
                 <input class="register-button" type="submit" value="submit">
             </form>
