fix bug in thankYou page h1

--- a/thankYou.html
+++ b/thankYou.html
@@ -34,7 +34,9 @@
     </header>
 
     <section class="thank-you">
-        <h1>Thank you for registering with us! We will contact you soon</h1>
+        <div>
+            <h2>Thank you for registering with us! We will contact you soon</h2>
+        </div>
     </section>
         
 
