fix responsive for register button

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                     </tr>
                 </table>
                 <div class="Join-classes">
-                    <h3>Join our classes!</h3>
-                    <a class="register-button" href="contact.html">register</a>
+                    <div>
+                        <h3>Join our classes!</h3>
+                    </div>
+                    <div><a class="register-button" href="contact.html">register</a></div>
                 </div>
             </div>
         </section>
