Fix the text in thank you page

--- a/thankYou.html
+++ b/thankYou.html
@@ -35,7 +35,7 @@
 
     <section class="thank-you">
         <div>
-            <h2>Thank you for registering with us! We will contact you soon</h2>
+            <h2>Thank you for submit. We will contact you soon</h2>
         </div>
     </section>
         
