Add alt attribute to the images

--- a/gallery.html
+++ b/gallery.html
@@ -35,16 +35,16 @@
     </header>
 
     <main id="photos">
-        <img src="assets/images/gallery-1.jpg" alt="">
-        <img src="assets/images/gallery-2.jpeg" alt="">
-        <img src="assets/images/gallery-3.jpeg" alt="">
-        <img src="assets/images/gallery-4.jpeg" alt="">
-        <img src="assets/images/gallery-5.jpeg" alt="">
-        <img src="assets/images/gallery-6.jpeg" alt="">
-        <img src="assets/images/gallery-7.jpeg" alt="">
-        <img src="assets/images/gallery-8.jpeg" alt="">
-        <img src="assets/images/gallery-10.jpeg" alt="">
-        <img src="assets/images/gallery-11.jpeg" alt="">
+        <img src="assets/images/gallery-1.jpg" alt="Four kids practice ballet standing position.">
+        <img src="assets/images/gallery-2.jpeg" alt="A teacher helps a kid with a ballet position.">
+        <img src="assets/images/gallery-3.jpeg" alt="Four kids stand in ballet class.">
+        <img src="assets/images/gallery-4.jpeg" alt="ballet class.">
+        <img src="assets/images/gallery-5.jpeg" alt="Tow girls practice ballet.">
+        <img src="assets/images/gallery-6.jpeg" alt="Ballet class.">
+        <img src="assets/images/gallery-7.jpeg" alt="Tow girls practice ballet with their teacher.">
+        <img src="assets/images/gallery-8.jpeg" alt="Four kids practice ballet.">
+        <img src="assets/images/gallery-10.jpeg" alt="Tow girls practice ballet with their teacher.">
+        <img src="assets/images/gallery-11.jpeg" alt="Three girls dance ballet.">
     </main>
 
     <footer id="gallery-footer">
