--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <a href="index.html" id="logo">
-            <img src="assets/images/logo.png" alt="">
+            <img src="assets/images/logo.png" alt="logo">
             <h1>Dancing Together</h1>
         </a>
         <nav>
@@ -45,7 +45,7 @@
             <h2>about-us</h2>
             <div class="about">
                 <div class="about-text" id="about-text1">
-                    <p><span>Dancing together</span> sees dancing as a passion we pass to our kids,our school offers fun activities for kids to learn how to dance from a young age </p>
+                    <p><span>Dancing together</span> sees dancing as a passion we pass on to our kids,our school offers fun activities for kids to learn how to dance from a young age.</p>
                     <p><span>The Ballet</span> is a wonderful way for young children to improve flexibility, gain strength, stay fit and have fun. It teaches them to focus and cooperate with others.</p>
                 </div>
                 <div class="about-image" id="about-image1"></div>
